# rust-cli

./: Cargo.toml  readme.org
src/: main.rs
