[package]
name = "rust-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = { version = "2.3.2"}
structopt = { version = "0.3", features = [ "paw" ] }
ansi_term = "0.12"
paw = "1.0"
regex = "1"